# TaskPulse-Agent

./: .gitignore  AGENTS.md  LICENSE
BE/: README.md  pyproject.toml
BE/.agents/: README.md  api-engineer.md  manifest.json  platform-observability-engineer.md  scheduler-agent-engineer.md
BE/.agents/tasks/: README.md  manifest.json
BE/.agents/tasks/tickets/: BE-001-healthcheck.md  BE-002-event-schema.md  BE-003-event-crud.md  BE-004-grpc-bootstrap.md  BE-005-scheduler-core.md  BE-006-agent-runner.md  BE-007-observability-bootstrap.md
BE/docs/: README.md  architecture.md  implementation-plan.md  team-roles.md
BE/src/be/: __init__.py  app.py  bootstrap.py  config.py  grpc_app.py
BE/src/be/agents/: graph.py  state.py  tool_registry.py
BE/src/be/agents/nodes/: planner.py  summarizer.py  tool_executor.py
BE/src/be/application/events/: dto.py  (+1 more)
BE/src/be/observability/: logging.py  metrics.py
BE/src/be/scheduler/: engine.py  recurrence.py
BE/tests/: test_app_factory.py  test_health.py
BE/tests/agents/: test_runner.py  test_tool_registry.py
BE/tests/api/: test_events_api.py
BE/tests/application/: test_event_service.py  test_health_service.py
BE/tests/domain/: test_event_schema.py  test_execution_schema.py
BE/tests/grpc/: test_grpc_health.py  test_grpc_server.py
BE/tests/infrastructure/: test_db_session.py  test_event_repository.py  test_redis_client.py
BE/tests/observability/: test_instrumentation.py  test_logging.py  test_metrics.py
BE/tests/presentation/: test_event_schemas.py
BE/tests/scheduler/: test_engine.py  test_recurrence.py
(+77 files in other folders)
