[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "leeSwallow", email = "lmh2157@outlook.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
be = "be:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
